[project]
name = "vxingest"
version = "0.1.0"
description = ""
authors = [
    { name = "Ian McGinnis", email = "ian.mcginnis@noaa.gov" },
    { name = "Randy Pierce", email = "randy.pierce@noaa.gov" },
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0.3",
    "xarray>=2025.10.1",
    "netcdf4>=1.7.3",
    "cfgrib>=0.9.15.1",
    "couchbase>=4.6.1",
    "pyproj>=3.7.2",
    "numpy>=2.4.6",
    "metpy>=1.7.1",
    "prometheus-client>=0.23.1",
    "ncepbufr",
    "eccodeslib>=2.47.1.20", # This shouldn't be needed - it's a dependency of eccodes. (itself a dependency of cfgrib) However, eccodes 2.45 & 2.46 don't appear to include eccodeslib which breaks cfgrib. Monitor https://github.com/ecmwf/eccodes-python/issues/150 for a resolution.
]

[project.scripts]
ingest = "vxingest.main:run_ingest"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "types-pyyaml>=6.0.12.20260518",
    "ruff>=0.15.15",
    "coverage>=7.14.1",
    "mypy>=2.1.0",
    "plotly>=6.3.1",
    "mysql-connector-python>=9.7.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv]
# Tell uv to only resolve dependencies for Linux x86/arm & MacOS
environments = [
    "platform_system == 'Linux' and platform_machine == 'x86_64'",
    "platform_system == 'Linux' and platform_machine == 'aarch64'",
    "platform_system == 'Darwin'",
]

[tool.uv.sources]
# Specify where to find the ncepbufr wheels
ncepbufr = [
    { path = "./third_party/NCEPLIBS-bufr/wheel_dist/ncepbufr-12.2.0-py313-none-macosx_15_0_arm64.whl", marker = "platform_system == 'Darwin'" },
    { path = "./third_party/NCEPLIBS-bufr/wheel_dist/ncepbufr-12.2.0-py313-none-linux_x86_64.whl", marker = "platform_system == 'Linux' and platform_machine == 'x86_64' " },
    { path = "./third_party/NCEPLIBS-bufr/wheel_dist/ncepbufr-12.2.0-py313-none-linux_aarch64.whl", marker = "platform_system == 'Linux' and platform_machine == 'aarch64' " },
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that need external resources like databases or data files (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.ruff]
# Dirs that contain third party example scripts and other languages
# test_misc has some existing issues, so adding it to the ignore for now
exclude = ["scripts", "meta_update_middleware", "third_party/NCEPLIBS-bufr/tests/test_misc.py"]
output-format = "pylint"


# For a list of available rules, see: https://docs.astral.sh/ruff/rules/
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "PTH", # flake8-use-pathlib
    "PT",  # flake8-pytest-style
    "B",   # bugbear
    "SIM", # flake8-simplify
    "LOG", # flake8-logging
]

lint.ignore = [
    "E501", # Supress line-too-long warnings: trust the formatter's judgement on this one.
    "W505", # Supress line-too-long warnings: trust the formatter's judgement on this one.
]
