[tool.poetry]
name = "ncepbufr"
version = "0.1.0"
description = "packaging the ncepbufr library for use in python"
authors = [
    "Ian McGinnis <ian.mcginnis@noaa.gov>",
    "Randy Pierce <randy.pierce@noaa.gov>",
]
readme = "README.md"
license = "GNU Lesser General Public License v3.0"
include = ["_bufrlib.cpython-312-darwin.so"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1"
netcdf4 = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
